<?xml version="1.0"?>
<package>
  <name>moon_control</name>
  <version>0.0.0</version>
  <description>The moon_control package</description>

  <maintainer email="Andriy.Petlovanyy@todo.todo">Andriy Petlovanyy</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>teleop_twist_keyboard</run_depend>
  <run_depend>twist_mux</run_depend>

</package>