<?xml version="1.0"?>
<package>
  <name>moon_description</name>
  <version>0.0.0</version>
  <description>The moon_description package</description>
  <maintainer email="Andriy.Petlovanyy@todo.todo">Andriy Petlovanyy</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>urdf_tutorial</run_depend>
</package>
