<?xml version="1.0"?>
<package>
  <name>moon_hardware</name>
  <version>0.0.0</version>
  <description>The moon_hardware package</description>
  <maintainer email="Andriy.Petlovanyy@todo.todo">Andriy Petlovanyy</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>moon_msgs</build_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>neato_driver</run_depend>
  <run_depend>moon_msgs</run_depend>
</package>
