<?xml version="1.0"?>
<package>
  <name>moon_launch</name>
  <version>0.0.0</version>
  <description>The moon_launch package</description>
  <maintainer email="Andriy.Petlovanyy@todo.todo">Andriy Petlovanyy</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>moon_control</run_depend>
  <run_depend>moon_gazebo</run_depend>
  <run_depend>moon_2dnav</run_depend>
</package>
